// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. gradient using prop styles 1`] = `
<View
  style={
    Object {
      "height": 200,
      "position": "relative",
      "width": 200,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape />
  </ARTSurfaceView>
</View>
`;

exports[`2. gradient using array prop styles 1`] = `
<View
  style={
    Object {
      "height": 300,
      "position": "relative",
      "width": 400,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape />
  </ARTSurfaceView>
</View>
`;

exports[`3. gradient using stylesheets 1`] = `
<View
  style={
    Object {
      "height": 200,
      "margin": 10,
      "position": "relative",
      "width": 200,
    }
  }
>
  <ARTSurfaceView
    style={
      Object {
        "bottom": 0,
        "height": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 0,
      }
    }
  >
    <ARTShape />
  </ARTSurfaceView>
</View>
`;
